--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_tflite: ^1.0.1
   carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.6.2
+  html: ^0.15.4
+  flutter_html: ^3.0.0-beta.2
   
 dependency_overrides:
   cached_network_image: any
