--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   html: ^0.15.4
   flutter_html: ^3.0.0-beta.2
+  path_provider: ^2.0.15
+  image: ^3.3.0
+  image_picker: ^0.8.9
   
 dependency_overrides:
   cached_network_image: any
