--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image: ^3.3.0
   image_picker: ^0.8.9
   provider: ^6.0.5
+  hive: ^2.2.3
   
 dependency_overrides:
   cached_network_image: any
