--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   image_picker: ^0.8.9
   provider: ^6.0.5
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
+  
   
 dependency_overrides:
   cached_network_image: any
@@ -56,6 +59,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -96,17 +101,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: PlayfairDisplay-SemiBold
+      fonts:
+        - asset: fonts/PlayfairDisplay-SemiBold.ttf
+  #     - asset: fonts/PlayfairDisplay/PlayfairDisplay-Bold.ttf
+  #     - asset: fonts/PlayfairDisplay/PlayfairDisplay-ExtraBold.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: PlayfairDisplay-Bold
+      fonts:
+        - asset: fonts/PlayfairDisplay-Bold.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+    - family: PlayfairDisplay-ExtraBold
+      fonts:
+        - asset: fonts/PlayfairDisplay-ExtraBold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
